[package]
name = "neva-check"
version = "0.1.0"
authors = ["aCLr <a.ch.clr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["json"]}
env_logger = "0.8.3"
log = "0.4.14"
serde = "1.0.125"
telegram-bot = "0.8.0"
futures = "0.3.13"
tokio = {version = "0.2", features = ["sync", "macros", "signal"]}